images and banner

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<!-- Inner -->
 						<div class="inner">
 							<header>
-								<h1><a href="index.html" id="logo">Helios</a></h1>
+								<h1><a href="index.html" id="logo">Cider Fields Labradoodles</a></h1>
 								<hr />
 								<p>Another fine freebie by HTML5 UP</p>
 							</header>
@@ -63,10 +63,11 @@
 			<!-- Banner -->
 				<section id="banner">
 					<header>
-						<h2>Hi. You're looking at <strong>Helios</strong>.</h2>
+						<h2>Welcome to <strong>Cider Field Labradoodles</strong>.</h2>
 						<p>
-							A (free) responsive site template by <a href="http://html5up.net">HTML5 UP</a>.
-							Built with HTML5/CSS3 and released under the <a href="http://html5up.net/license">CCA</a> license.
+							Our mission is to breed laid-back, intuitive,</br> easy to train dogs who are raised with love and care, </br>
+							in a clean, spacious environment, with early training, socialisation and a top diet.</br></br>
+							Companions - Assistance - Therapy and School Support Dogs
 						</p>
 					</header>
 				</section>
@@ -164,21 +165,14 @@
 					<article id="main" class="container special">
 						<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
 						<header>
-							<h2><a href="#">Sed massa imperdiet magnis</a></h2>
-							<p>
-								Sociis aenean eu aenean mollis mollis facilisis primis ornare penatibus aenean. Cursus ac enim
-								pulvinar curabitur morbi convallis. Lectus malesuada sed fermentum dolore amet.
-							</p>
+							<h2><a href="#">Our Philosophy</a></h2>
 						</header>
 						<p>
-							Commodo id natoque malesuada sollicitudin elit suscipit. Curae suspendisse mauris posuere accumsan massa
-							posuere lacus convallis tellus interdum. Amet nullam fringilla nibh nulla convallis ut venenatis purus
-							sit arcu sociis. Nunc fermentum adipiscing tempor cursus nascetur adipiscing adipiscing. Primis aliquam
-							mus lacinia lobortis phasellus suscipit. Fermentum lobortis non tristique ante proin sociis accumsan
-							lobortis. Auctor etiam porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum
-							consequat integer interdum integer purus sapien. Nibh eleifend nulla nascetur pharetra commodo mi augue
-							interdum tellus. Ornare cursus augue feugiat sodales velit lorem. Semper elementum ullamcorper lacinia
-							natoque aenean scelerisque.
+							We are a small, fully registered professional breeder. Our pups are healthy, confident pups, with a loving,
+							people focussed temperament. Their parents are comprehensively genetically health tested, with the Orivet Full Breed Profile,
+							to help ensure your pup remains healthy and clear of genetic diseases. Our dogs are much loved and well cared for each step of the way.
+							Pups are firstly born and raised in our home, then safely explore the natural environment, with play, daily human love and attention as they get older.
+							We feed a supplemented raw diet for an optimal start to life.
 						</p>
 						<footer>
 							<a href="#" class="button">Continue Reading</a>
