--- a/index.html
+++ b/index.html
@@ -35,26 +35,42 @@
 							<ul>
 								<li><a href="index.html">Home</a></li>
 								<li>
-									<a href="#">Dropdown</a>
+									<a href="#">Information</a>
 									<ul>
-										<li><a href="#">Lorem ipsum dolor</a></li>
-										<li><a href="#">Magna phasellus</a></li>
-										<li><a href="#">Etiam dolore nisl</a></li>
+										<li><a href="#">About Labradoodles</a></li>
+										<li><a href="#">Genetics</a></li>
+										<li><a href="#">Dog Size</a></li>
+										<li><a href="#">Dog Colours</a></li>
+										<li><a href="#">Preparing For Puppy</a></li>
+										<li><a href="#">Shopping For Puppy</a></li>
+										<li><a href="#">Travelling Home</a></li>
+										<li><a href="#">Introduction To Home</a></li>
+										<li><a href="#">Diet</a></li>
+										<li><a href="#">Grooming</a></li>
+										<li><a href="#">Ear Care</a></li>
+										<li><a href="#">FAQ</a></li>
+										<li><a href="#">Early Age Desexing</a></li>
+										<li><a href="#">Can We Visit Your Puppies?</a></li>
+										<li><a href="#">Vaccination</a></li>
+										<li><a href="#">Privacy Policy</a></li>
 										<li>
-											<a href="#">And a submenu &hellip;</a>
+											<!-- <a href="#">And a submenu &hellip;</a>
 											<ul>
 												<li><a href="#">Lorem ipsum dolor</a></li>
 												<li><a href="#">Phasellus consequat</a></li>
 												<li><a href="#">Magna phasellus</a></li>
 												<li><a href="#">Etiam dolore nisl</a></li>
-											</ul>
+											</ul> -->
 										</li>
-										<li><a href="#">Veroeros feugiat</a></li>
 									</ul>
 								</li>
-								<li><a href="left-sidebar.html">Left Sidebar</a></li>
-								<li><a href="right-sidebar.html">Right Sidebar</a></li>
-								<li><a href="no-sidebar.html">No Sidebar</a></li>
+								<li><a href="#">Adoption - Waitlist Enquiries</a></li>
+								<li><a href="#">Litters Due Soon</a></li>
+								<li><a href="#">Available Pups</a></li>
+								<li><a href="#">Guardian Program</a></li>
+								<li><a href="#">How We Raise Our Pups</a></li>
+								<li><a href="#">What Our Puppy families Say...</a></li>
+								<li><a href="#">Contact</a></li>
 							</ul>
 						</nav>
 
@@ -67,7 +83,9 @@
 						<p>
 							Our mission is to breed laid-back, intuitive,</br> easy to train dogs who are raised with love and care, </br>
 							in a clean, spacious environment, with early training, socialisation and a top diet.</br></br>
-							Companions - Assistance - Therapy and School Support Dogs
+							<li>Assistance</li>
+							<li>Therapy</li>
+							<li>School Support Dogs</li>
 						</p>
 					</header>
 				</section>
