--- a/index.html
+++ b/index.html
@@ -198,8 +198,10 @@
 									<h3><a href="#">Gravida aliquam penatibus</a></h3>
 								</header>
 								<p>
-									Amet nullam fringilla nibh nulla convallis tique ante proin sociis accumsan lobortis. Auctor etiam
-									porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum consequat integer interdum.
+									As full members of the PIAA, we comply with a strict code of ethics, welfare and care which exceeds government regulators’ requirements. 
+									In addition to regular voluntary vet audits, we also do early age training with our pups, feed the very best of diets, 
+									and ensure they are raised with lots of toys, space, a happy mum and tons of love and attention, and provide a lifetime rehoming policy.
+									PIAA Full Member, Govt Registration BIN0000235109004 
 								</p>
 							</article>
 							<article class="col-4 col-12-mobile special">
@@ -208,20 +210,11 @@
 									<h3><a href="#">Sed quis rhoncus placerat</a></h3>
 								</header>
 								<p>
-									Amet nullam fringilla nibh nulla convallis tique ante proin sociis accumsan lobortis. Auctor etiam
-									porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum consequat integer interdum.
+									Our dogs have lots of space to play together, lay around under trees, swim when it is hot, and are part of our home and family.
+									Puppies are born in our home, and as they grow they enjoy our clean, spacious areas,
+									with an inside room and a doggy door leading to a large outside area with clean, different toys each day, lots of people time and the best of health care.
+									We welcome you to come and visit your pup, subject to our quarantine requirements. 
 								</p>
-							</article>
-							<article class="col-4 col-12-mobile special">
-								<a href="#" class="image featured"><img src="images/pic09.jpg" alt="" /></a>
-								<header>
-									<h3><a href="#">Magna laoreet et aliquam</a></h3>
-								</header>
-								<p>
-									Amet nullam fringilla nibh nulla convallis tique ante proin sociis accumsan lobortis. Auctor etiam
-									porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum consequat integer interdum.
-								</p>
-							</article>
 						</div>
 					</section>
 
